# hha

./: .gitignore  ADR001  CHANGELOG.md  CONTRIBUTING.md  Codessa_Health_CMO_Schema_v1.0.sql  Codessa_Health_Schema_Pack_v1.0.sql  HHA_Architecture_Spec_v0.1.md  HHA_Canonical_Schema_v0.1.sql  LICENSE  README.md  SPEC_REVIEW_AND_IMPLEMENTATION_PLAN.md  codessa_health_adapter_spec_v_1_0.md  diagnosis.py  mission_control_health_adapter_integration_contract_v_1_0.md  npm_probe.py  planner.py  pyproject.toml  schemas.py  test_p0_npm_enospc.py
docs/: README.md  architecture.md  database.md  overview.md
health_adapter/api/: app.py
health_adapter/domain/: diagnosis.py  models.py  planner.py
health_adapter/tests/: test_npm_enospc_fixture.py
supabase/migrations/: 0001_codessa_health_schema_pack_v1_0.sql  0002_seed_fixture_npm_enospc.sql
